objects/Campaign.object
<CustomObject>
    <sharingModel>FullAccess</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count for Validation. Used for subject line check.
Robin S. 12.06.2019</description>
        <label>[T] Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <description>Autonumber for the Campaign. Is used for the better identification of a campaign.
Robin S. 08.04.2019</description>
        <displayFormat>KD{000000}</displayFormat>
        <label>Campaign ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for the relation between Opp and Campaign.
Robin S. 22.02.2019</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Für diese Opportunity kann keine Kampagne erstellt werden</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Substitute Doctor, Substitute Caregiver, Recruitment Doctor, Recruitment Caregiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <description>This is the subject line for the offer mail.
Robin S. 12.04.2019</description>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Sender_Name__c</fullName>
        <formula>IF( Opportunity__r.RecordType.DeveloperName = &quot;SubstituteCaregiver&quot;, &quot;doctari - Pflege Jobs&quot;, &quot;doctari - Aerzte Jobs&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Sender Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jobportal_Link__c</fullName>
        <formula>IF(  PrivateCampaign__c,&quot;Der Job ist nicht veröffentlicht&quot;,IF( CONTAINS(Opportunity__r.RecordType.DeveloperName, &quot;Caregiver&quot;), &quot;https://mein.doctari.de/jobs/&quot; &amp; Campaign_ID__c , &quot;https://mein.doctari.de/jobs/&quot; &amp; Campaign_ID__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jobportal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Time__c</fullName>
        <description>This field shows the operating time from the opportunity. 
Robin S. 22.08.2019</description>
        <formula>TEXT(DAY(Opportunity__r.DateFrom__c))&amp;&quot;.&quot;&amp;TEXT(MONTH(Opportunity__r.DateFrom__c))&amp;&quot;.&quot;&amp;TEXT(YEAR(Opportunity__r.DateFrom__c)) &amp; &quot; - &quot; 
&amp; TEXT(DAY(Opportunity__r.DateTo__c))&amp;&quot;.&quot;&amp;TEXT(MONTH(Opportunity__r.DateTo__c))&amp;&quot;.&quot;&amp;TEXT(YEAR(Opportunity__r.DateTo__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Die Einsatzzeit entspricht der Zeit, die in der Opportunity festgelegt wurde.</inlineHelpText>
        <label>Operating Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_MCAPICallout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[T] MCAPICallout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <description>This formula Field is used for a List View on the PersonAccount Layout.
Robin S. 24.05.2019</description>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Model__c</fullName>
        <description>This field shows the Opp Placement Model.
Robin S. 09.04.2019</description>
        <formula>Text(Opportunity__r.PlacementModel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placement Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This offer is not displayed on the job search.
Robin S. 28.11.2019</description>
        <inlineHelpText>This offer is not displayed on the job search.</inlineHelpText>
        <label>private campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Naming_Helper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field for auto Campaign Naming.
Robin S. 09.04.2019</description>
        <label>[T] Naming Helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Offer_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[T] Offer Template</label>
        <referenceTo>T_Offer_Template__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_Sender_Address__c</fullName>
        <description>This sender address is used for the offer Mailing via Marketo. 
Robin S. 19.07.2019</description>
        <formula>IF( Opportunity__r.RecordType.DeveloperName = &quot;SubstituteCaregiver&quot;, &quot;pflege@mail.doctari.de&quot;, &quot;aerzte@mail.doctari.de&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Sender Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketoAPICallout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to start the API Callout Trigger</description>
        <label>MarketoAPICallout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Callout_executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For the marketo Batch.</description>
        <label>[T] Callout executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_MarketoSenderAddress__c</fullName>
        <formula>IF( Opportunity__r.RecordType.DeveloperName = &quot;SubstituteCaregiver&quot;, &quot;pflege@doctari.de&quot;, &quot;aerzte@doctari.de&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]_MarketoSenderAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName &amp; &quot;-&quot; &amp; Text(Opportunity__r.PlacementModel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Opp RecType / PlacementModel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Count_for_Opportunity_Rollup__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This field is used for the Rollup &quot;Opp: Number Campaigns&quot;.
Robin S. 24.07.2019</description>
        <label>[T] Count for Opportunity Rollup</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Campaign_Record_Type</fullName>
        <active>true</active>
        <description>Default Campaign Record Type</description>
        <label>Campaign Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Campaign_Sent_Closed_Record_Type</fullName>
        <active>true</active>
        <description>The Campaign is read-only in status &quot;Sent&quot; or &quot;Closed&quot;</description>
        <label>Campaign (Sent/Closed) Record Type</label>
    </recordTypes>
    <validationRules>
        <fullName>CampaignIsReadOnlyInStatusClosedOrSent</fullName>
        <active>false</active>
        <description>In Status &quot;Sent&quot; or &quot;Closed&quot; the Campaign is read only.</description>
        <errorConditionFormula>Not(ISCHANGED(  MarketoAPICallout__c  )) &amp;&amp;
(ISCHANGED( Status ) &amp;&amp;
 
NOT(ISPICKVAL(PRIORVALUE(Status), &apos;In_Preparation&apos;)) &amp;&amp;
ISPICKVAL(Status, &apos;In_Preparation&apos;)

) || 
NOT(ISCHANGED(Status)) &amp;&amp; NOT(ISPICKVAL(Status, &apos;In_Preparation&apos;))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>In Status &quot;Sent&quot; or &quot;Closed&quot; the Campaign is read only.</errorMessage>
    </validationRules>
</CustomObject>